fixed animation issue with cutting off button

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -92,7 +92,7 @@ body {
 }
 
 .table {
-  width: 600px;
+  width: 650px;
 }
 
 .on-sale {
@@ -101,4 +101,32 @@ body {
 
 .qty {
   width: 60px;
+}
+
+$animation-duration: 0.3s;
+
+.animate-inventory {
+  line-height: 40px;
+  list-style: none;
+  box-sizing: border-box;
+  &.ng-move, &.ng-enter {
+    -webkit-transition: all linear $animation-duration;
+    transition: all linear $animation-duration;
+  }
+  &.ng-leave {
+    -webkit-transition: all linear $animation-duration;
+    transition: all linear $animation-duration;
+    &.ng-leave-active {
+      opacity: 0;
+      max-height: 0;
+    }
+  }
+  &.ng-move, &.ng-enter {
+    opacity: 0;
+    max-height: 0;
+  }
+  &.ng-leave, &.ng-move.ng-move-active, &.ng-enter.ng-enter-active {
+    opacity: 1;
+    max-height: 40px;
+  }
 }
